# invoice-env

./: .env.example  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate-submission.sh
backend/: .env.example  main.py
backend/api/: services.py
backend/db/: mongo.py
backend/env/: environment.py  graders.py
env/: environment.py  graders.py  models.py
frontend/: .env.example
frontend/src/pages/: Dashboard.jsx
server/: app.py
tests/: test_environment.py  test_models.py
